@@ -5,9 +5,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import com.google.common.base.Objects;
 import com.google.common.collect.Lists;
@@ -84,14 +82,13 @@ public interface SedMapper {
 
     default List<Statsborgerskap> hentStatsborgerskap(SedDataDto sedDataDto) {
         return sedDataDto.getBruker().getStatsborgerskap().stream()
+            .filter(landkodeIso3 -> LandkodeMapper.finnLandkodeIso2(landkodeIso3).isPresent())
             .map(this::lagStatsborgerskap)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private Statsborgerskap lagStatsborgerskap(String landkode) {
-        Statsborgerskap statsborgerskap = new Statsborgerskap();
-        statsborgerskap.setLand(LandkodeMapper.getLandkodeIso2(landkode));
-        return statsborgerskap;
+        return new Statsborgerskap(LandkodeMapper.mapTilLandkodeIso2(landkode));
     }
 
     default List<Pin> hentPin(SedDataDto sedData) {
@@ -104,7 +101,7 @@ public interface SedMapper {
         for (Ident utenlandskIdent : sedData.getUtenlandskIdent()) {
             pins.add(
                     new Pin(utenlandskIdent.getIdent(),
-                            LandkodeMapper.getLandkodeIso2(utenlandskIdent.getLandkode()), null)
+                            LandkodeMapper.mapTilLandkodeIso2(utenlandskIdent.getLandkode()), null)
             );
         }
 
@@ -145,7 +142,7 @@ public interface SedMapper {
         bostedsadresse.setBy(adresse.getPoststed());
         bostedsadresse.setPostnummer(adresse.getPostnr());
         bostedsadresse.setRegion(adresse.getRegion());
-        bostedsadresse.setLand(LandkodeMapper.getLandkodeIso2(adresse.getLand()));
+        bostedsadresse.setLand(LandkodeMapper.mapTilLandkodeIso2(adresse.getLand()));
         return bostedsadresse;
     }
 
@@ -213,7 +210,7 @@ public interface SedMapper {
         return virksomheter.stream()
                 .filter(virksomhetPredicate)
                 .map(this::hentArbeidsgiver)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     default Arbeidsgiver hentArbeidsgiver(Virksomhet virksomhet) {
@@ -253,7 +250,7 @@ public interface SedMapper {
         adresse.setGate(sAdresse.getGateadresse());
         adresse.setPostnummer(sAdresse.getPostnr());
         adresse.setBy(sAdresse.getPoststed());
-        adresse.setLand(LandkodeMapper.getLandkodeIso2(sAdresse.getLand()));
+        adresse.setLand(LandkodeMapper.mapTilLandkodeIso2(sAdresse.getLand()));
         adresse.setBygning(null);
         adresse.setRegion(sAdresse.getRegion());
 
@@ -302,7 +299,7 @@ public interface SedMapper {
         } else if (iso3.length() == 2) {
             return iso3;
         } else {
-            return LandkodeMapper.getLandkodeIso2(iso3);
+            return LandkodeMapper.mapTilLandkodeIso2(iso3);
         }
     }
 }
